[package]
name = "foreback"
version = "1.0.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"

readme = "README.md"
license = "MPL-2.0"
description = "Future adapters for running aditional work in the background"
repository = "https://github.com/Lucretiel/foreback"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = { version = "0.3.14", default-features=false }
pin-project = "1.0.7"

[dev-dependencies]
async-channel = "1.6.1"
futures = { version = "0.3.14", features = ["executor"], default-features=false }
